--- a/src/main/resources/assets/alexscavesplus/lang/en_us.json
+++ b/src/main/resources/assets/alexscavesplus/lang/en_us.json
@@ -1,5 +1,6 @@
 {
   "item.alexscavesplus.marsh_disc": "Music Disc",
   "entity.alexscavesplus.lacandrae": "Lacandrae",
+  "entity.alexscavesplus.grottotaurus": "Grottotaurus",
   "item.alexscavesplus.marsh_disc.desc": "SoulInferno - Marsh"
 }
