--- a/src/main/resources/assets/alexscavesplus/lang/en_us.json
+++ b/src/main/resources/assets/alexscavesplus/lang/en_us.json
@@ -1,6 +1,11 @@
 {
   "item.alexscavesplus.marsh_disc": "Music Disc",
+  "item.alexscavesplus.lacandrae_spawn_egg": "Lacandrae Spawn Egg",
+  "item.alexscavesplus.vortex_spawn_egg": "Vortex Spawn Egg",
+  "item.alexscavesplus.ajoltodon_spawn_egg": "Ajoltodon Spawn Egg",
   "entity.alexscavesplus.lacandrae": "Lacandrae",
+  "entity.alexscavesplus.vortex": "Vortex",
+  "entity.alexscavesplus.ajoltodon": "Ajoltodon",
   "entity.alexscavesplus.grottotaurus": "Grottotaurus",
   "item.alexscavesplus.marsh_disc.desc": "SoulInferno - Marsh"
 }
