--- a/src/main/resources/assets/alexscavesplus/lang/en_us.json
+++ b/src/main/resources/assets/alexscavesplus/lang/en_us.json
@@ -5,6 +5,8 @@
   "item.alexscavesplus.ajolotodon_spawn_egg": "Ajolotodon Spawn Egg",
   "entity.alexscavesplus.lacandrae": "Lacandrae",
   "entity.alexscavesplus.vortex": "Vortex",
+  "entity.alexscavesplus.ender_virus": "Ender Virus",
+  "entity.alexscavesplus.end_king": "End King",
   "entity.alexscavesplus.ajolotodon": "Ajolotodon",
   "entity.alexscavesplus.grottotaurus": "Grottotaurus",
   "item.alexscavesplus.marsh_disc.desc": "SoulInferno - Marsh"
